--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev -p 8080",
-    "build": "quasar build && npm run export",
+    "build": "quasar build -m pwa && npm run export",
     "export": "rm -f spa.zip && if [[ $OSTYPE == msys ]]; then npm run zip-windows; else npm run zip-macos; fi",
-    "zip-macos": "ditto -c -k --sequesterRsrc --keepParent dist/spa spa.zip",
-    "zip-windows": "cd dist && zip -r ../spa.zip ./spa && cd ../"
+    "zip-macos": "ditto -c -k --sequesterRsrc --keepParent dist/pwa pwa.zip",
+    "zip-windows": "cd dist && zip -r ../pwa.zip ./pwa && cd ../",
+    "set-icon": "icongenie generate -m pwa -i src/assets/icon.png --splashscreen-color=fff"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
