--- a/src-pwa/manifest.json
+++ b/src-pwa/manifest.json
@@ -1,4 +1,6 @@
 {
+  "name": "Shine Bright Like A Diamond",
+  "short_name": "SBLAD",
   "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#027be3",
