--- a/src-pwa/manifest.json
+++ b/src-pwa/manifest.json
@@ -2,8 +2,8 @@
   "name": "Shine Bright Like A Diamond",
   "short_name": "SBLAD",
   "orientation": "portrait",
-  "background_color": "#ffffff",
-  "theme_color": "#027be3",
+  "background_color": "#142233",
+  "theme_color": "#142233",
   "icons": [
     {
       "src": "icons/icon-128x128.png",
