--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.4.1",
     "pinia": "^2.0.11",
     "quasar": "^2.14.3",
     "vue": "^3.0.0",
